--- a/css/appointment.css
+++ b/css/appointment.css
@@ -1,23 +1,25 @@
-.img1 {
-    height: auto;
-    display: block;
-    text-align: top;
-    background-color: white;
-    position: absolute;
+.side-bar {
+    background-color: black;
+    width: 150px;
+    height: 100%;
+    position: fixed;
     top: 0;
+    /*remove margin top*/
+    left: 0;
+    /*remove margin left*/
+    overflow: hidden;
+    /* hide over flow of children*/
+    transition: 0.5s;
 }
-h1{
-    font-size: 2.5em;
-    color: #d48814;
-}
-a {
+
+.side-bar a {
     display: block;
-    position: absolute;
-    float: left;
-    font-family: sans-serif;
-    color: black;
+    background-color: grey;
+    padding: 12px 16px;
     text-decoration: none;
-    width: 100%;
-    height: 70px;
-    text-align: center;
+    color: white;
+}
+
+.side-bar .close-btn {
+    text-align: right;
 }
